# Funding-SpreadArbitrage

./: Cargo.toml  README.md
src/: ingestors.rs  main.rs
src/ingestors/: binance_ingestor.rs  bybit_ingestor.rs  hyperliquid_ingestor.rs  models.rs  scanner.rs
