[package]
name = "scanner-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Standard Async stack
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures = "0.3"

# Data & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"

# Database
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Exchange SDKs
# Note: Using the official Hyperliquid SDK 0.6+ is safer for 2025 L1 changes
# hyperliquid_rust_sdk = "0.6" 
bybit = { package = "rust-bybit", version = "0.2" }

# Security & Crypto
rustls = { version = "0.23", features = ["ring"] }
# 'vendored' is good for cross-compiling, keep it if you are on Linux/WSL
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12.28", features = ["json"] }
